# shrt

./: Cargo.toml  README.md
src/: main.rs
testdata/: add-url.json
